fix(main-view): make main-view slide effect work correctly on mobile

--- a/public/stylesheets/less/modules/catalog.less
+++ b/public/stylesheets/less/modules/catalog.less
@@ -1,7 +1,7 @@
 /**
  * CATALOG module
  */
-.catalog-search {
+.catalog-search-input {
   position: relative;
   width: 200px;
   float: right;
