--- a/public/stylesheets/less/modules/main-view.less
+++ b/public/stylesheets/less/modules/main-view.less
@@ -1,8 +1,7 @@
-/* Have to set height explicity on ui-view
+/* Have to set height explicitly on ui-view
 to prevent collapsing during animation*/
 .main-view {
-  position: absolute;
-  width: 100%
+  height: 0;
 }
 
 .main-view.ng-enter {
